--- a/assets/userplayground.css
+++ b/assets/userplayground.css
@@ -1,9 +1,14 @@
 #upload-data {
     width: 100%;
-    height: 60px;
-    line-height: 60px;
+    padding: 1rem;
+    /* height: 60px; */
+    /* line-height: 60px; */
     border-radius: .3rem;
     border: 1px dashed black;
     text-align: center;
     margin: 10px;
+}
+
+a:hover {
+    cursor: pointer;
 }
