--- a/assets/userplayground.css
+++ b/assets/userplayground.css
@@ -6,7 +6,7 @@
     border-radius: .3rem;
     border: 1px dashed black;
     text-align: center;
-    margin: 10px;
+    margin: 10px 0;
 }
 
 a:hover {
