--- a/assets/indexPage.css
+++ b/assets/indexPage.css
@@ -142,36 +142,69 @@
     opacity: 1; /* Firefox */
   }
 
-  @keyframes fadein {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0.5;
-    }
-}
-
 ._dash-loading-callback {
-  font-family: sans-serif;
-  padding-top: 50px;
-  color: rgb(90, 90, 90);
-  
-  /* The banner */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  cursor: progress;
-
-  opacity: 0;
-  background-color: rgb(250, 250, 250);
-  /* Delay animation by 1s to prevent flashing 
-     and smoothly transition the animation over 0.5s 
-   */
-  -moz-animation: fadein 0.5s ease-in 1s forwards; /* Firefox */
-  -webkit-animation: fadein 0.5s ease-in 1s forwards; /* Safari and Chrome */
-  -o-animation: fadein 0.5s ease-in 1s forwards; /* Opera */
-    animation: fadein 0.5s ease-in 1s forwards;
+position: fixed;
+z-index: 100;
 }
+
+._dash-loading-callback::after {
+content: 'Computation in Progress......';
+font-family: sans-serif;
+padding-top: 50px;
+color: #000;
+
+-webkit-animation: fadein 0.5s ease-in 1s forwards; /* Safari, Chrome and Opera > 12.1 */
+-moz-animation: fadein 0.5s ease-in 1s forwards; /* Firefox < 16 */
+    -ms-animation: fadein 0.5s ease-in 1s forwards; /* Internet Explorer */
+    -o-animation: fadein 0.5s ease-in 1s forwards; /* Opera < 12.1 */
+        animation: fadein 0.5s ease-in 1s forwards;  
+/* prevent flickering on every callback */
+-webkit-animation-delay: 0.5s;
+animation-delay: 0.5s;
+
+/* The banner */
+opacity: 0;
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(255, 255, 255, 0.5);
+text-align: center;
+cursor: progress;
+z-index: 100000;
+
+background-image: url(https://www.w3schools.com/html/programming.gif);
+background-position: center center;
+background-repeat: no-repeat;
+}
+
+@keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
