login user page update

--- a/assets/indexPage.css
+++ b/assets/indexPage.css
@@ -126,7 +126,7 @@
 }
 
 .first_row {
-    background-color: #ffffff;
+    background-color: #F8F8F8;
     padding-bottom :1rem;
     border-radius: 2%;
 }
