--- a/assets/indexPage.css
+++ b/assets/indexPage.css
@@ -174,7 +174,8 @@ text-align: center;
 cursor: progress;
 z-index: 100000;
 
-background-image: url(https://www.w3schools.com/html/programming.gif);
+/* background-image: url(https://www.w3schools.com/html/programming.gif); */
+background-image: url(https://c.tenor.com/Tu0MCmJ4TJUAAAAC/load-loading.gif);
 background-position: center center;
 background-repeat: no-repeat;
 }
